k8s/namespace-default/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "api-go-server"
  labels:
    app: "api-go-server"
spec:
  selector:
    matchLabels:
      app: "api-go-server"
  replicas: 1
  template:
    metadata:
      name: "api-go-server"
      labels:
        app: "api-go-server"
    spec:
      containers:
        - name: "goserver"
          image: "heliandro/hello-go:v5.5"

          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 300m
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 30 # period 3s * 30s failure = 90s => 00:01:30m

          # apos o startup execute os 2 abaixo
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10

          volumeMounts:
            - mountPath: "/app/myfamily"
              name: config
              readOnly: true

            - mountPath: "/app/pvc"
              name: goserver-volume

      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc

        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
