k8s/namespace-default/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: "api-go-server-service"
spec:
  selector:
    app: "api-go-server" # o mesmo valor do selector do deployment
  type: NodePort
  ports:
    - name: api-go-server-service
      port: 80
      targetPort: 8000
      protocol: TCP
      NodePort: 30001  # range de portas 30.000 a 32767
